--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -23,6 +23,18 @@
                 <version>2.2.3</version>
             </dependency>
 
+<!--            <dependency>-->
+<!--                <groupId>org.apache.rocketmq</groupId>-->
+<!--                <artifactId>rocketmq-client</artifactId>-->
+<!--                <version>5.1.3</version>-->
+<!--            </dependency>-->
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client-java</artifactId>
+                <version>5.0.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
