--- a/task-dispatcher/src/main/resources/application-home.yml
+++ b/task-dispatcher/src/main/resources/application-home.yml
@@ -1,6 +1,13 @@
 server:
     port: 8989
 
+spring:
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
+    password:
+
 mq:
   host: 127.0.0.1:9876
   proxy: 10.23.1.117:8081
