--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -59,6 +59,18 @@
                 <artifactId>mysql-connector-j</artifactId>
                 <version>8.1.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>4.4.0</version>
+            </dependency>
+
+<!--            <dependency>-->
+<!--                <groupId>com.example</groupId>-->
+<!--                <artifactId>common</artifactId>-->
+<!--                <version>1.0</version>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 </project>
