--- a/fs-router/pom.xml
+++ b/fs-router/pom.xml
@@ -55,6 +55,16 @@
             <groupId>com.example</groupId>
             <artifactId>common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.v2java</groupId>
+            <artifactId>dao</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
