--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>common</module>
         <module>fs-router</module>
         <module>fs-worker</module>
+        <module>dao</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -114,6 +115,12 @@
             <dependency>
                 <groupId>com.example</groupId>
                 <artifactId>common</artifactId>
+                <version>1.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.v2java</groupId>
+                <artifactId>dao</artifactId>
                 <version>1.0</version>
             </dependency>
         </dependencies>
