--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -17,6 +17,15 @@
 
     <dependencyManagement>
         <dependencies>
+
+<!--            <dependency>-->
+<!--                <groupId>org.apache.dubbo</groupId>-->
+<!--                <artifactId>dubbo</artifactId>-->
+<!--                <version>2.7.13</version>-->
+<!--            </dependency>-->
+
+
+
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
@@ -67,10 +76,12 @@
             </dependency>
 
 <!--            <dependency>-->
-<!--                <groupId>com.example</groupId>-->
-<!--                <artifactId>common</artifactId>-->
-<!--                <version>1.0</version>-->
+<!--                <groupId>org.apache.dubbo</groupId>-->
+<!--                <artifactId>dubbo-spring-boot-starter</artifactId>-->
+<!--                <version>2.7.13</version>-->
 <!--            </dependency>-->
+
+
         </dependencies>
     </dependencyManagement>
 </project>
