--- a/dubbo-provider/Dockerfile
+++ b/dubbo-provider/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 
-ADD target/*.jar dubbo-provider.jar
+COPY target/*.jar dubbo-provider.jar
 
 ENTRYPOINT ["java","-jar","dubbo-provider.jar"]
