--- a/dubbo-provider/Dockerfile
+++ b/dubbo-provider/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:8-jdk-alpine
 
 WORKDIR /srv
 
-COPY ./target/*.jar /srv/dubbo-provider.jar
+COPY target/*.jar /srv/dubbo-provider.jar
 
 ENTRYPOINT ["java","-jar","/srv/dubbo-provider.jar"]
