--- a/dubbo-provider/src/main/resources/application.yml
+++ b/dubbo-provider/src/main/resources/application.yml
@@ -5,9 +5,8 @@ spring:
     nacos:
       server-addr: localhost:8848
 
-server:
-  port: 8081
-
 dubbo:
   scan:
     base-packages: com.example.dubboprovider
+  protocol:
+    port: 20880
