--- a/dubbo-provider/Dockerfile
+++ b/dubbo-provider/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /code
 
 #将当前目录（即 Dockerfile所在的目录）的所有文件和目录复制到容器内的/app目录中
 COPY ../* .
+
+RUN ls
+
 #编译项目
 RUN mvn clean install -B -Dmaven.test.skip=true
 
