--- a/dubbo-consumer/pom.xml
+++ b/dubbo-consumer/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
         <!-- 负载均衡器 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
