--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,10 +38,10 @@ jobs:
         # 登录阿里云镜像仓库
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
         # 使用Dockerfile构建镜像
-        docker build . --file ./dubbo-provider/Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-provider:1.0 --build-arg COMMIT_ID=${{ github.sha }}
+        docker build . --file ./dubbo-provider/Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-provider:${{ github.sha }} --build-arg COMMIT_ID=${{ github.sha }}
         # 推送镜像到镜像仓库
-        docker push registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-provider:1.0
+        docker push registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-provider:${{ github.sha }}
         # 使用Dockerfile构建镜像
-        docker build . --file ./dubbo-consumer/Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-consumer:1.0 --build-arg COMMIT_ID=${{ github.sha }}
+        docker build . --file ./dubbo-consumer/Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-consumer:${{ github.sha }} --build-arg COMMIT_ID=${{ github.sha }}
         # 推送镜像到镜像仓库
-        docker push registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-consumer:1.0
+        docker push registry.cn-hangzhou.aliyuncs.com/lwx_img_repo/dubbo-consumer:${{ github.sha }}
