--- a/dubbo-consumer/src/main/resources/application-prod.yml
+++ b/dubbo-consumer/src/main/resources/application-prod.yml
@@ -4,7 +4,8 @@ spring:
   cloud:
     nacos:
       server-addr: mse-0b4b8640-nacos-ans.mse.aliyuncs.com
-
+  config:
+    import: nacos:dubbo-consumer-prod.properties?group=DEFAULT_GROUP&refreshEnabled=true
 
 server:
   port: 8082
