--- a/dubbo-consumer/src/main/resources/application-prod.yml
+++ b/dubbo-consumer/src/main/resources/application-prod.yml
@@ -2,6 +2,8 @@ spring:
   cloud:
     nacos:
       server-addr: mse-0b4b8640-nacos-ans.mse.aliyuncs.com
+      config:
+        name: dubbo-consumer-prod.properties
 
 server:
   port: 8082
