--- a/dubbo-provider/src/main/resources/application-prod.yml
+++ b/dubbo-provider/src/main/resources/application-prod.yml
@@ -3,7 +3,8 @@ spring:
     name: dubbo-provider
   cloud:
     nacos:
-      server-addr: mse-0b4b8640-nacos-ans.mse.aliyuncs.com
+      server-addr: mse-896ea3f0-p.nacos-ans.mse.aliyuncs.com:8848
+    #server-addr: mse-0b4b8640-nacos-ans.mse.aliyuncs.com
 
 dubbo:
   scan:
