--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>dubbo-consumer</module>
         <module>dubbo-provider</module>
         <module>gateway</module>
+        <module>nacos-config-listener</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
