--- a/dubbo-consumer/src/main/resources/application-dev.yml
+++ b/dubbo-consumer/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ spring:
     name: dubbo-consumer
   cloud:
     nacos:
-      server-addr: localhost:8848
+      server-addr: 127.0.0.1:8848
 
 
 server:
